# CommunicationProgram

./: .gitignore  CMakeLists.txt  constants.h  main.cpp
aurora_power_plant/: AuroraPowerPlant.cpp  AuroraPowerPlant.h
aurorapp/: Aurora.cpp  Aurora.h  AuroraException.h
modbus_power_plant/: Modbus_PowerPlant.cpp  Modbus_PowerPlant.h
modbuspp/: modbus.cpp  modbus.h
power_plant/: PowerPlant.cpp  PowerPlant.h
